components/evaluator/tests/compile-fail/non-callable.rs
// error-pattern:`a.b` is not callable

var a = {a: 'a', b: 1};
a.b();
